{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 61,
  "lineage": "261d4d33-1988-60b9-9940-987f69a2d9df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sngpr_insta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0172cbe2088c3bb63",
            "arn": "arn:aws:ec2:ap-southeast-1:857561174233:instance/i-0d83ff963714a613a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d83ff963714a613a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jnks",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c2b1fd85d2fdb2dd",
            "private_dns": "ip-192-168-10-108.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.10.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067a26c2da297b948",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017cf8ea2e327e7ac",
            "tags": {
              "Name": "sngpr-insta-1"
            },
            "tags_all": {
              "Name": "sngpr-insta-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09465b76a53a9d83e"
            ]
          },
          "dependencies": [
            "aws_subnet.pub_sub",
            "aws_vpc.sngpr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sngpr_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:857561174233:internet-gateway/igw-0e371fb675fbd975e",
            "id": "igw-0e371fb675fbd975e",
            "owner_id": "857561174233",
            "tags": {
              "Name": "sngpr-IGW"
            },
            "tags_all": {
              "Name": "sngpr-IGW"
            },
            "vpc_id": "vpc-0159f46d920bbad15"
          },
          "dependencies": [
            "aws_vpc.sngpr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "sngpr_ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:857561174233:loadbalancer/app/sngpr-ALB/a51c23ad1c720586",
            "arn_suffix": "app/sngpr-ALB/a51c23ad1c720586",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sngpr-ALB-257711698.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:857561174233:loadbalancer/app/sngpr-ALB/a51c23ad1c720586",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sngpr-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0aae950447421a34d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-017cf8ea2e327e7ac"
              },
              {
                "subnet_id": "subnet-0c737b22ea42270fc"
              }
            ],
            "subnets": [
              "subnet-017cf8ea2e327e7ac",
              "subnet-0c737b22ea42270fc"
            ],
            "tags": {
              "Name": "SNGPR_ALB"
            },
            "tags_all": {
              "Name": "SNGPR_ALB"
            },
            "vpc_id": "vpc-0159f46d920bbad15",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.ALB_sg",
            "aws_subnet.pub_sub",
            "aws_vpc.sngpr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listerner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:857561174233:listener/app/sngpr-ALB/a51c23ad1c720586/cc93b7f945d566c9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:857561174233:targetgroup/singa-ALB-TG/e4a7d3006c65a97c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:857561174233:listener/app/sngpr-ALB/a51c23ad1c720586/cc93b7f945d566c9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:857561174233:loadbalancer/app/sngpr-ALB/a51c23ad1c720586",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.sngpr_ALB",
            "aws_lb_target_group.ALB_tg",
            "aws_security_group.ALB_sg",
            "aws_subnet.pub_sub",
            "aws_vpc.sngpr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ALB_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:857561174233:targetgroup/singa-ALB-TG/e4a7d3006c65a97c",
            "arn_suffix": "targetgroup/singa-ALB-TG/e4a7d3006c65a97c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:857561174233:targetgroup/singa-ALB-TG/e4a7d3006c65a97c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "singa-ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ALB-TG"
            },
            "tags_all": {
              "Name": "ALB-TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0159f46d920bbad15"
          },
          "dependencies": [
            "aws_vpc.sngpr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:857561174233:security-group/sg-0aae950447421a34d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aae950447421a34d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB-sg",
            "name_prefix": "",
            "owner_id": "857561174233",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0159f46d920bbad15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sngpr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1435244216",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aae950447421a34d",
            "security_group_rule_id": "sgr-0ba4469630a08225e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ALB_sg",
            "aws_vpc.sngpr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1708203650",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0aae950447421a34d",
            "security_group_rule_id": "sgr-0dd7dcb723c231e9b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ALB_sg",
            "aws_vpc.sngpr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:857561174233:subnet/subnet-017cf8ea2e327e7ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.10.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017cf8ea2e327e7ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857561174233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-1"
            },
            "tags_all": {
              "Name": "pub-sub-1"
            },
            "vpc_id": "vpc-0159f46d920bbad15"
          },
          "dependencies": [
            "aws_vpc.sngpr-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:857561174233:subnet/subnet-0c737b22ea42270fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.10.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c737b22ea42270fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857561174233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-2"
            },
            "tags_all": {
              "Name": "pub-sub-2"
            },
            "vpc_id": "vpc-0159f46d920bbad15"
          },
          "dependencies": [
            "aws_vpc.sngpr-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sngpr-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:857561174233:vpc/vpc-0159f46d920bbad15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.10.0/24",
            "default_network_acl_id": "acl-00fa05682461a9d38",
            "default_route_table_id": "rtb-037d34f2101c80dc6",
            "default_security_group_id": "sg-09465b76a53a9d83e",
            "dhcp_options_id": "dopt-0094e95ec5e3facc8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0159f46d920bbad15",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-037d34f2101c80dc6",
            "owner_id": "857561174233",
            "tags": {
              "Name": "sngpr-vpc"
            },
            "tags_all": {
              "Name": "sngpr-vpc"
            }
          }
        }
      ]
    }
  ]
}